--- a/social/templates/social/post_list.html
+++ b/social/templates/social/post_list.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="../static/img/tab-icon.png" type="image/x-icon">
 </head>
 
-<body style="background: #999">
+<body style="background: white;">
 
     <div class="container-fluid" style="padding: 0;">
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -47,28 +47,29 @@
         <!-- Barra Izquierda -->
         <div class="sidebar m-5 d-none d-md-block">
             <div class="">
-                <div class="card " style="width: 18rem; text-align:center;border-radius: 20px;">
+                <div class=" card " style=" width: 18rem; text-align:center;border-radius: 20px;">
+                    {% if profile.picture %}
                     <img class="card-img-top rounded-circle"
                         style="width:60%; position: relative;left: 62px;padding-top: 20px;"
-                        src="https://i.pinimg.com/736x/ea/f2/2e/eaf22e6a189f76ed24054e2ca7feb00f.jpg"
-                        alt="Card image cap">
+                        src="{{ profile.picture.url }}" alt="Card image cap">
+                    {% endif %}
                     <div class="card-body">
-                        <h5 class="card-title font-weight-bold">Tony Stark</h5>
-                        <h6 class="card-title font-weight-bold">@iron_man</h6>
+                        <h5 class="card-title font-weight-bold">{{ profile.name }}</h5>
+                        <h6 class="card-title font-weight-bold">@{{ profile.user }}</h6>
 
 
-                        <p class="card-text">You know who i am. </p>
+                        <p class="card-text">{{ profile.bio }}</p>
                         <h6 class="card-title font-weight-bold">
-                            100 Followers
+                            {{ followers }} | Followers
                             100 Following
                         </h6>
-                        <a href="#" class="btn  text-white rounded-pill">Mi perfil</a>
+                        <a href="{% url 'profile' user.pk %}" class="btn  text-white rounded-pill">Meu Perfil</a>
                     </div>
 
                 </div>
-                <button id="addATweetLeft" onclick="addTweet()" type="button"
+                <a href="{% url 'profile_edit' user.pk %}" id="addATweetLeft" onclick="addTweet()" type="button"
                     style="border-radius: 30px; font-size: 1.1rem; font-weight:bold;"
-                    class="btn btn-lg btn-block mt-4 text-white ">Editar mi perfil</button>
+                    class="btn btn-lg btn-block mt-4 text-white ">Editar mi perfil</a>
             </div>
         </div>
         <!-- End Barra Izquierda -->
@@ -81,9 +82,9 @@
                 <div class="d-flex">
                     <div class="col-xs">
                         <!-- Image form -->
-                        <img src="https://i.pinimg.com/736x/ea/f2/2e/eaf22e6a189f76ed24054e2ca7feb00f.jpg" alt=""
-                            class="avator">
-                        <!-- Formulario -->
+                        {% if profile.picture %}
+                        <img src="{{ profile.picture.url }}" alt="" class="avator">
+                        <!-- Formulario -->{% endif %}
                     </div>
 
                     <!-- Formulario -->
@@ -108,13 +109,14 @@
                     <div class="tweet-header">
                         <img src="https://toppng.com/uploads/preview/roger-berry-avatar-placeholder-11562991561rbrfzlng6h.png"
                             alt="" class="avator">
-                        <a style="text-decoration: none; color: black" href="{% url 'post_detail' post.pk %}">
+                        <div class="tweet-header-info">
+                            <span><a href="{% url 'profile' post.author.pk %}">@{{ post.author }}</a></span><span>.
+                                <a style="text-decoration: none; color: black" href="{% url 'post_detail' post.pk %}">
 
-                            <div class="tweet-header-info">
-                                <span>@{{ post.author }}</span><span>. {{ post.create_on }}
-                                </span>
-                                <p> {{ post.body }}</p>
-                            </div>
+                                    {{ post.create_on }}
+                            </span>
+                            <p> {{ post.body }}</p>
+                        </div>
                         </a>
                     </div>
                     <div class="comments">
@@ -149,13 +151,11 @@
                 <div class="card-header">
                     Who to Follow
                 </div>
+                {% for usuario in usuarios %}
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="https://twitter.com/playboicarti"
-                            style="text-decoration: none;color: #657787;">@playboicarti</a></li>
-                    <li class="list-group-item"><a href="https://twitter.com/LILUZIVERT"
-                            style="text-decoration: none;color: #657787;">@LILUZIVERT</a></li>
-                    <li class="list-group-item"><a href="https://twitter.com/NARUTO_kousiki"
-                            style="text-decoration: none;color: #657787;">@NARUTO_kousiki</a></li>
+                    <li class="list-group-item"><a href="{% url 'profile' usuario.pk %}"
+                            style="text-decoration: none;color: #657787;">@{{ usuario.username }}</a></li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
