--- a/social/templates/social/post_list.html
+++ b/social/templates/social/post_list.html
@@ -24,13 +24,18 @@
 
     <div class="container-fluid" style="padding: 0;">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" style="color: white;" href="#">
+            <a class="navbar-brand" style="color: white;" href="/">
                 <!-- Twitter logo -->
                 <img src="{% static 'img/twitter-brands.svg' %}" width="30" height="30" class="d-inline-block align-top"
                     alt="">
                 <!-- Twitter logo -->
                 Twttr Clone
             </a>
+            <form class="form-inline" action="{% url 'search_profile' %}" method="GET">
+                <input class="form-control mr-sm-2" type="search" name="query" value="{{ request.GET.query }}"
+                    placeholder="Username" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="hi mr-auto">
 
@@ -49,9 +54,8 @@
             <div class="">
                 <div class=" card " style=" width: 18rem; text-align:center;border-radius: 20px;">
                     {% if profile.picture %}
-                    <img class="card-img-top rounded-circle"
-                        style="width:60%; position: relative;left: 62px;padding-top: 20px;"
-                        src="{{ profile.picture.url }}" alt="Card image cap">
+                    <img class="card-img-top rounded-circle" style="width:60%; position: relative;left: 62px;"
+                        src="{{ profile.picture.url }}  " alt="Card image cap">
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">{{ profile.name }}</h5>
@@ -60,8 +64,11 @@
 
                         <p class="card-text">{{ profile.bio }}</p>
                         <h6 class="card-title font-weight-bold">
-                            {{ followers }} | Followers
-                            100 Following
+                            <button style="margin-right: 0px; background: white; color: black" type="button"
+                                class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                {{ followers }} |
+                                Seguidor</button>
+
                         </h6>
                         <a href="{% url 'profile' user.pk %}" class="btn  text-white rounded-pill">Meu Perfil</a>
                     </div>
@@ -74,10 +81,38 @@
         </div>
         <!-- End Barra Izquierda -->
         {% block content %}
-
-        <!-- Center -->
-        <div class="content">
-
+        <div class="container">
+            <!-- Center -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div style="max-width: 600px; background: white; " class="modal-dialog" role="document">
+                    <div style="background: white; " class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Seguidores</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            {% csrf_token %}
+                            <table>
+                                {% for seguidor in lista_seguidores %}
+                                <div class="col align-self-center mt-3">
+                                    <img style="width: 50px; height: 40px;" src="{{ seguidor.profile.picture.url }}"
+                                        alt="" class="avator">
+                                    <a class="col-1" style="color: black;" href="{% url 'profile' seguidor.pk %}">
+                                        @{{ seguidor.username }}</a>
+                                </div>
+                                {% empty %}
+                                <h3>Nenhum seguidor.</h3>
+                                {% endfor%}
+                            </table>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="inputTweetArea" class="tweet-wrap">
                 <div class="d-flex">
                     <div class="col-xs">
@@ -101,45 +136,67 @@
                 <div class="d-flex justify-content-center mt-2">
                 </div>
             </div>
+            <div class="content">
+                <!-- Tweets -->
+                <div id="tweetCards">
+                    <!-- FOR LOOP HERE -->{% for post in post_list %}
+                    <div class="tweet-wrap" style="border-radius:20px">
+                        <div class="tweet-header">
+                            <img src="{{ post.author.profile.picture.url }}" alt="" class="avator">
+                            <div class="tweet-header-info">
+                                <span><a href="{% url 'profile' post.author.profile.pk %}">@
+                                        {{ post.author }}</a></span><span>.
+                                    <a style="text-decoration: none; color: black"
+                                        href="{% url 'post_detail' post.pk %}">
 
-            <!-- Tweets -->
-            <div id="tweetCards">
-                <!-- FOR LOOP HERE -->{% for post in post_list %}
-                <div class="tweet-wrap" style="border-radius:20px">
-                    <div class="tweet-header">
-                        <img src="https://toppng.com/uploads/preview/roger-berry-avatar-placeholder-11562991561rbrfzlng6h.png"
-                            alt="" class="avator">
-                        <div class="tweet-header-info">
-                            <span><a href="{% url 'profile' post.author.pk %}">@{{ post.author }}</a></span><span>.
-                                <a style="text-decoration: none; color: black" href="{% url 'post_detail' post.pk %}">
-
-                                    {{ post.create_on }}
-                            </span>
-                            <p> {{ post.body }}</p>
+                                        {{ post.create_on }}
+                                </span>
+                                <p> {{ post.body }}</p>
+                            </div>
+                            </a>
                         </div>
-                        </a>
+                        <br>
+                        <form action="{% url 'like' post.pk %}" method="POST">
+                            <div>
+                                {% csrf_token %}
+                                <button style="background: white; border: none;">
+                                    <svg class="feather feather-heart sc-dnqmqq jxshSx"
+                                        xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" aria-hidden="true">
+                                        <path
+                                            d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+                                        </path>
+                                    </svg>
+                                </button>
+                                <div class="likes-count"> {{ post.likes.all.count }}</div>
+                            </div>
+                        </form>
+
+
+
+                        <div class="comments">
+                            <button style="background: white; border: none;">
+                                <path
+                                    d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+                                </path>
+                                </svg>
+                            </button>
+                            <div class="comment-count"></div>
+                        </div>
+
+
+
+                        <!-- DELETE -->
+                        <!-- END-DELETE -->
                     </div>
-                    <div class="comments">
-                        <button style="background: white; border: none;">
-                            <path
-                                d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-                            </path>
-                            </svg>
-                        </button>
-                        <div class="comment-count"></div>
-                    </div>
+                    <!-- FOR LOOP HERE -->{% endfor %}
 
-
-
-                    <!-- DELETE -->
-                    <!-- END-DELETE -->
                 </div>
-                <!-- FOR LOOP HERE -->{% endfor %}
+                <!-- EndTweets -->
+
 
             </div>
-            <!-- EndTweets -->
-
-
         </div>
         <!-- End Center -->
         {% endblock content %}
@@ -173,6 +230,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="{% static 'js/script.js' %}"></script>
 
+
+    <script>
+
+        localStorage.setItem('my-scroll-pos', $(window).scrollTop());
+        var pos = localStorage.getItem('my-scroll-pos', 0);
+        if (pos)
+            $(window).scrollTop(pos)
+
+
+    </script>
 </body>
 
 </html>
