--- a/social/templates/social/search.html
+++ b/social/templates/social/search.html
@@ -8,29 +8,16 @@
 
 
 
-    <!-- Tweets -->
+    {% for profile in profile_list %}
     <div id="tweetCards">
         <div class="tweet-wrap" style="border-radius:20px">
             <div class="tweet-header">
-                <img src="{% static 'img/tony.jpg' %}" alt="" class="avator">
+                <img src="{{ profile.picture.url }}" alt="" class="avator">
                 <div class="tweet-header-info">
-                    <span>@{{ post.author }}</span><span>. {{ post.create_on }}
-                        {% if request.user == post.author %}
-                        <div class="dropdown">
-                            <button style="background: black; margin-left: 300px; margin-bottom: 0px;"
-                                class="btn mt-0 btn-sm btn-secondary dropdown-toggle" type="button"
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                Opções
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="{% url 'post_delete' post.pk %}">Excluir</a>
-                                <a class="dropdown-item" href="{% url 'post_edit' post.pk %}">Editar</a>
-                            </div>
-                        </div>
-                        {% endif %}
+                    <span><a href="{% url 'profile' profile.pk %}">@{{ profile.user }}</a></span><span>.
+                        {{ profile.name }}
                     </span>
-                    <p>{{ post.body }}</p>
+                    <p>Seguidores: {{ profile.followers.all.count }}</p>
                 </div>
             </div>
             <div class="comments">
@@ -46,23 +33,15 @@
 
 
 
+
             <!-- DELETE -->
+
             <!-- END-DELETE -->
 
 
             <!-- DELETE -->
             <!-- END-DELETE -->
         </div>
-        <form method="POST">
-            {% csrf_token %}
-            <div class="tweet-wrap mt-5" style="border-radius:20px">
-                {{ form | crispy }}
-                <div>
-                    <button class="btn-sm btn btn-success mt-3">Submit!</button>
-
-                </div>
-            </div>
-        </form>
 
         {% for comment in comments %}
         <div class="tweet-wrap" style="border-radius:20px">
@@ -96,7 +75,9 @@
         {% endfor %}
 
     </div>
-    <!-- EndTweets -->
+    {% empty %}
+    <h1>TEste</h1>
+    {% endfor %}
 
 
 
