--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -77,7 +77,7 @@
                         </div>
 
                         {% empty %}
-                        <h1>Nenhum seguidor.</h1>
+                        <h4>Nenhum seguidor.</h4>
                         {% endfor%}
                     </table>
                 </div>
@@ -94,14 +94,16 @@
             <!-- FOR LOOP HERE -->{% for post in posts %}
             <div class="tweet-wrap" style="border-radius:20px">
                 <div class="tweet-header">
-                    <img src="https://toppng.com/uploads/preview/roger-berry-avatar-placeholder-11562991561rbrfzlng6h.png"
-                        alt="" class="avator">
+                    <img src="{{ profile.picture.url }}" alt="" class="avator">
                     <a style="text-decoration: none; color: black" href="{% url 'post_detail' post.pk %}">
 
                         <div class="tweet-header-info">
                             <span>@{{ post.author }}</span><span>. {{ post.create_on }}
                             </span>
                             <p> {{ post.body }}</p>
+                            {% if post.image %}
+                            <img src="{{ post.image.url }}" class="post-image" alt="">
+                            {% endif %}
                         </div>
                     </a>
                 </div>
